---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-11-18
  Features:
    - Added condensing agricultural tower
    - Added cactus seeds
    - Added compressing cactus wood recipe
  Changes:
    - Change cactus result amount when mined (Min 1 / Max 5 -> 5) and grow time (8 min -> 5 min)
    - Water harvesting is now unlocked after compression science
    - Changed water harvester recipe ( 1 glass panel -> 1 heavy glass) and energy required (20 -> 10)
  Balancing:
    - Balanced cactus wood recipe to match new amounts of cactuses
  Graphics:
    - Added compressing icons to recipes
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-11-19
  Compatibility:
    - Fixed compatbility error with visible planets mod
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-11-18
  Features:
    - Added steam venting recipe
    - Added heavy glass productivity technology
  Bugfixes:
    - Fixed sand sifting recipes not having machine tint
  Compatibility:
    - Moved omnia's Orientation so it does not collide with Arig
    - Any planet start, moved unlock of automation 2 technology sooner in the progression
    - Added custom 4k graphic for the visible planet mod
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-10-31
  Bugfixes:
    - Fixed hyper splitter unable to connect to circuit
    - Removed pollution absortion from Arig tiles
    - Fixed glass recipe productivity making excess barrel5
    - Removed advanced quartz recipe and moved to hyarion
  Compatibility:
    - Crushing industry, Fixed error when crushing coal setting was disable
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-10-31
  Features: