@@ -59,7 +59,7 @@ planetaris-advanced-solar-panel=Advanced solar panel
 planetaris-supported-solar-panel=Supported solar panel
 planetaris-high-support-electric-pole=High support electric pole
 planetaris-water-harvester=Water harvester
-planetaris-water-harvesting=Water harvesting
+planetaris-water-harvesting=water harvesting
 planetaris-raw-diamond=Raw diamond
 planetaris-polished-diamond=Polished diamond
 
@@ -103,7 +103,7 @@ planetaris-press=Compress materials into new ones
 planetaris-advanced-solar-panel=Twice as efficient as a basic solar panel
 planetaris-supported-solar-panel=A solar panel specialized to be build over liquid and unstable surfaces
 planetaris-high-support-electric-pole=A small electric pole specialized to be build over liquid and unstable surfaces
-planetaris-water-harvester=A machine able to produce water from the atmosphere's moisture
+planetaris-water-harvester=A machine able to produce water from the atmosphere's humidity
 planetaris-condensing-agricultural-tower=Plants seeds and harvest them while condensing a fluid and storing it inside a tank each harvest. Once the tank is full the excess will not be stored. Read more in factorpedia.
 hidden-condensing-agricultural-tower-tank=Stores up to 30k of water from harvesting.
 
